@@ -48,7 +48,6 @@
     <property name="test.timeout" value="900000" />
     <property name="test.junit.output.format" value="plain" />
     <property name="test.src.dir" value="src/test/java" />
-    <property name="junit.hadoop.conf" value="${user.home}/pigtest/conf/"/>
 
     <path id="penny.classpath">
         <pathelement location="${build.classes}"/>
@@ -66,7 +65,6 @@
         <pathelement location="${pigjar-withouthadoop}"/>
         <pathelement location="${test.classes}"/>
         <pathelement location="${test.src.dir}"/>
-        <pathelement location="${junit.hadoop.conf}" />
         <pathelement location="${pigtest}"/>
         <fileset dir="../../../build/ivy/lib">
             <include name="**/*.jar"/>
