@@ -146,7 +146,7 @@ public class TestPathPartitionHelper extends TestCase {
 
     @Override
     protected void setUp() throws Exception {
-    File oldConf = new File(System.getProperty("user.home")+"/pigtest/conf/hadoop-site.xml");
+    File oldConf = new File("build/classes/hadoop-site.xml");
     oldConf.delete();
 	conf = new Configuration();
 
